--- a/app/build.gradle
+++ b/app/build.gradle
@@ -117,7 +117,7 @@ dependencies {
     implementation("io.reactivex.rxjava3:rxjava:3.1.3")
 
     //PDF Viewer
-    implementation("com.github.barteksc:android-pdf-viewer:2.8.2")
+//    implementation("com.github.barteksc:android-pdf-viewer:2.8.2")
 
     //Crop Image
     implementation "com.github.CanHub:Android-Image-Cropper:4.0.0"
