--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,12 @@
     <uses-permission android:name="android.permission.BLUETOOTH_SCAN" /> <!-- ? -->
     <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
 
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE"/>
+<!--    <uses-permission android:name="android.permission.WRITE_SETTINGS"-->
+<!--        tools:ignore="ProtectedPermissions" />-->
+
+
     <application
         android:name=".MVVMApplication"
         android:allowBackup="false"
@@ -32,14 +38,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ICare"
         tools:targetApi="31">
-        <activity
-            android:name=".ui.personInfo.edit.PersonInfoEditActivity"
-            android:exported="false"
-            android:screenOrientation="portrait"/>
-        <activity
-            android:name=".ui.personInfo.content.PersonInfoContentActivity"
-            android:exported="false"
-            android:screenOrientation="portrait"/>
+        
         <activity
             android:name=".ui.start.StartActivity"
             android:exported="false"
